task 2/styles/statsCard.css
.flex3{
    display: flex;
    flex-direction: column;
    gap: 20px;
    justify-content: space-between;
}
.flex3-a{
    border: 1px solid #E5E7EB;
    border-radius: 16px;
    padding: 24px;
    height: 166px;
    width: 506.46px;
    display: flex;
    flex-direction: row;
    gap: 20px;
}
.k4{
    font-weight: 600;
    font-size: 36px;
    line-height: 36px;
    letter-spacing: 0px;
}
.flex3-b{
    height: 118px;
    width: 389.46px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    justify-content: space-between;
}
.stats-heading{

    font-weight: 700;
    font-size: 16px;
    line-height: 21px;
    letter-spacing: 0px;
    color: #101828;
}
.stats-text, .stats-text2{
    font-weight: 400px;
    font-size: 12px;
    letter-spacing: 0px;
    color: #6A7282;
}
.stats-text{
    margin-top: 7px;
}
.stats-text2{
    width: 130px;
}
.flex3-c{
    display: flex;
    flex-direction: row;
    gap: 8px;
}
.customer-avatars{
    display: flex;
    flex-direction: row;
    width: 66px;
    justify-content: center;
    align-items: center;
    position: relative;
}

.left { z-index: 3; }
.middle { z-index: 2; margin-left: -12px; }
.right { z-index: 1; margin-left: -12px; }
.avatar{
    width: 28px;
    height: 28px;
    border-radius: 14px;
    border: 2px solid white;
    cursor: pointer;
    transition: transform 0.3s;
    position: relative;
}

.avatar:hover {
    transform: translateY(-3px); /* moves up 5px */
}

